rename to build & test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       # Build code
-      - name: Test & Sonarcloud
+      - name: Build & Test
         run: ./mvnw test
